# ava-bot

./: .gitignore  Cargo.toml  Makefile  README.md  deny.toml  input.css  package-lock.json  package.json  tailwind.config.js  test.http
public/css/: main.css
src/: lib.rs  main.rs
src/extractors/: mod.rs
src/handlers/: assistant.rs  chats.rs  common.rs  mod.rs
src/tools/: mod.rs
templates/: base.html.j2  index.html.j2  signal.html.j2
templates/blocks/: image.html.j2  markdown.html.j2  speech.html.j2
templates/events/: chat_input.html.j2  chat_input_skeleton.html.j2  chat_reply.html.j2  chat_reply_skeleton.html.j2  signal.html.j2
