[package]
name = "ava-bot"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.75"
askama = { version = "0.12.1", features = ["with-axum"] }
askama_axum = "0.3.0"
axum = { version = "0.6.20", features = [
  "http2",
  "headers",
  "multipart",
  "query",
  "tracing",
] }
axum-extra = { version = "0.8.0", features = ["cookie"] }
axum-server = { version = "0.5.1", features = ["tls-rustls"] }
clap = { version = "4.4.8", features = ["derive"] }
futures = "0.3.29"
serde = { version = "1.0.192", features = ["derive"] }
serde_json = "1.0.108"
tokio = { version = "1.34.0", features = ["rt", "rt-multi-thread", "macros"] }
tokio-stream = "0.1.14"
tower-http = { version = "0.4.4", features = [
  "compression-full",
  "cors",
  "trace",
  "fs",
] }
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }
