[package]
name = "ava-bot"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.75"
askama = { version = "0.12.1", features = ["with-axum"] }
askama_axum = "0.3.0"
axum = { version = "0.6.20", features = [
  "http2",
  "headers",
  "multipart",
  "query",
  "tracing",
] }
axum-extra = { version = "0.8.0", features = ["cookie"] }
axum-server = { version = "0.5.1", features = ["tls-rustls"] }
base64 = "0.21.5"
chrono = { version = "0.4.31", features = ["serde"] }
clap = { version = "4.4.8", features = ["derive"] }
comrak = { version = "0.19.0", default-features = false, features = ["syntect"] }
dashmap = "5.5.3"
derive_more = "0.99.17"
futures = "0.3.29"
llm-sdk = "0.3.0"
schemars = "0.8.16"
serde = { version = "1.0.192", features = ["derive"] }
serde_json = "1.0.108"
strum = { version = "0.25.0", features = ["derive"] }
tokio = { version = "1.34.0", features = ["rt", "rt-multi-thread", "macros"] }
tokio-stream = { version = "0.1.14", features = ["sync"] }
tower-http = { version = "0.4.4", features = [
  "compression-full",
  "cors",
  "trace",
  "fs",
] }
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }
uuid = { version = "1.5.0", features = ["v4", "serde"] }
